@@ -60,10 +60,10 @@
 	<FORM NAME="addbalance" METHOD="POST" ACTION="?m=balanceadd">
 	<INPUT type="submit" class="hiddenbtn">
 	<TR CLASS="LIGHT">
-		<TD WIDTH="100%" COLSPAN="3" CLASS="FBOTTOMU" ALIGN="RIGHT"> 
+		<TD WIDTH="100%" COLSPAN="3" CLASS="FBOTTOMU" ALIGN="RIGHT">
+			{math assign="value" equation="x*-1" x=$payment.value}
 			<INPUT TYPE="HIDDEN" NAME="m" VALUE="balanceadd">
-			<INPUT TYPE="HIDDEN" NAME="addbalance[type]" VALUE="1">
-			<INPUT TYPE="HIDDEN" NAME="addbalance[value]" VALUE="{$payment.value}">
+			<INPUT TYPE="HIDDEN" NAME="addbalance[value]" VALUE="{$value}">
 			<INPUT TYPE="HIDDEN" NAME="addbalance[comment]" VALUE="{$payment.name} / {$payment.creditor}">
 			<A HREF="?m=paymentedit&id={$payment.id}">{t}Edit{/t} <IMG SRC="img/edit.gif" alt=""></A>
 			<A HREF="?m=paymentlist">{t}Cancel{/t} <IMG SRC="img/cancel.gif" alt=""></A>
